# procedure-codding

./: 1.txt  CMakeLists.txt  README.MD
headers/: Engine.hpp  Field.h  GABot.h  GACore.h  Settings.h  Values.h  engine.hpp  settings_window.h  values.h
headers/genetic/: Bot.h  GACore.h
headers/ui/: Button.h  MainWindow.h  SettingsWindow.h
src/: Button.cpp  Engine.cpp  Field.cpp  GACore.cpp  Main.cpp  Settings.cpp  draw.cpp  engine.cpp  hw.cpp  input.cpp  main.cpp  settings_window.cpp
src/genetic/: Bot.cpp  GACore.cpp
src/ui/: Button.cpp  MainWindow.cpp  SettingsWindow.cpp
